Fixed the overlapping menu button in mobile devices (#1660)

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -59,3 +59,7 @@ html[data-theme='dark'] .DocSearch {
     var(--ifm-color-emphasis-100) 100%
   );
 }
+
+.menu button {
+  margin-bottom: 70px;
+}
